@@ -189,7 +189,7 @@ while :; do
 	else
 		STATE=$(($STATE - 1))
 	fi
-	echo "ON STATE: $STATE"
+	#echo "ON STATE: $STATE"
 done
 
 if test "$STATE" = -1 
