@@ -1,8 +1,13 @@
 user-setup (1.2) UNRELEASED; urgency=low
 
+  [ Christian Perrier ]
   * Space-indentation cleanup in user-setup-ask.
 
- -- Christian Perrier <bubulle@debian.org>  Sun, 23 Apr 2006 09:29:24 +0200
+  [ Joey Hess ]
+  * Comment out STATE debugging message.
+  * Check for the passwd file before grepping it.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 12 May 2006 16:55:03 -0500
 
 user-setup (1.1) unstable; urgency=low
 
